--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -127,7 +127,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 8px;
-    margin-right: 120px;
+    /* margin-right: 120px; */
   }
   .pvpButton {
     width: 200px;
@@ -612,9 +612,9 @@ body {
 .modeSelectionContainer{
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   gap: 8px;
-  margin-right: 150px;
   margin-top: 100px;
 }
 .backModeContainer {
@@ -635,7 +635,6 @@ body {
   transition: background-color 0.1s;
   border: solid 2px white;
   text-decoration: none;
-  margin-right: 150px;
 }
 .backModeButton:hover {
   background-color: #ccc;
@@ -643,4 +642,36 @@ body {
 .backModeButton h2 {
   color: white;
   font-size: 20px;
+}
+
+.exitButtonContainer{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+.exitBTN {
+  width: 50px;
+  height: 50px;
+  background-color: #080808;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 8px;
+  transition: background-color 0.1s;
+  border: solid 2px white;
+  text-decoration: none;
+ 
+}
+.exitBTN:hover {
+  background-color: #ccc;
+}
+.exitBTN h2 {
+  color: white;
+  font-size: 20px;
+}
+.Exit{
+  text-decoration: none;
+  color: white;
 }
